Theme changed to default

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<div data-role="page" id="home" data-theme="b">
+	<div data-role="page" id="home" data-theme="a">
 		<div data-role="header">
 			<h1>ITT - Home</h1>
 			<div data-role="navbar">
@@ -29,7 +29,7 @@
 		</div>
 	</div>
 
-	<div data-role="page" id="app" data-theme="b">
+	<div data-role="page" id="app" data-theme="a">
 		<div data-role="header">
 			<h1>ITT - App</h1>
 			<div data-role="navbar">
@@ -74,7 +74,7 @@
 		</div>
 	</div>
 
-	<div data-role="page" id="contact" data-theme="b">
+	<div data-role="page" id="contact" data-theme="a">
 		<div data-role="header">
 			<h1>ITT - Contacts</h1>
 			<div data-role="navbar">
